# Funkin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  resource.rc
.github/workflows/: build.yml  ci.yml  deps.yml  release.yml
funkin/: CMakeLists.txt  resources.qrc  resources_ui.qrc
funkin/assets/images/: test.xml
funkin/assets/shaders/: image.hlsl  ui.hlsl
funkin/qt/: engine.qrc  icons.qrc  ui.qrc
funkin/src/: main.cpp  pch.hpp
funkin/src/app/: app.cpp  app.hpp  debug.cpp  debug.hpp  main.cpp  registry.cpp  registry.hpp  settings.hpp
funkin/src/app/project/: editor.cpp  editor.hpp  project.cpp  project.hpp
funkin/src/app/projects/: launcher.cpp  launcher.hpp  project.cpp  project.hpp
funkin/src/assets/: asset_cache.hpp  asset_compiler.cpp  asset_compiler.hpp  asset_handle.hpp  asset_loader.cpp  asset_loader.hpp  asset_packer.cpp  asset_packer.hpp  asset_types.cpp  asset_types.hpp  asset_watcher.cpp  asset_watcher.hpp  assets.cpp  assets.hpp  assets_handle.hpp  assets_types.hpp
funkin/src/assets/loaders/: audio_loader.cpp  audio_loader.hpp  font_loader.cpp  font_loader.hpp  json_loader.cpp  json_loader.hpp  sparrow_loader.cpp  sparrow_loader.hpp  texture_loader.cpp  texture_loader.hpp
funkin/src/cache/: cache.cpp  cache.hpp  project_cache.cpp  project_cache.hpp
funkin/src/core/: engine.cpp  engine.hpp  log.hpp  main.cpp
funkin/src/drivers/: driver_descriptors.hpp  driver_handles.hpp  driver_interface.hpp  driver_types.hpp
funkin/src/drivers/d3d12/: d3d12.cpp  d3d12.hpp  d3d12_buffer.cpp  d3d12_commands.cpp  d3d12_descriptors.cpp  d3d12_descriptors.hpp  d3d12_internal.hpp  d3d12_pipeline.cpp  d3d12_texture.cpp
funkin/src/drivers/d3d12/d3d12_ui/: d3d12_text.cpp  d3d12_text.hpp  d3d12_ui.cpp  d3d12_ui.hpp
funkin/src/drivers/vulkan/: vulkan.cpp  vulkan.hpp
funkin/src/filesystem/: filesystem.cpp  filesystem.hpp
funkin/src/imgui/: imgui_impl_bgfx.cpp  imgui_impl_bgfx.hpp  imgui_impl_sdl3.cpp  imgui_impl_sdl3.hpp
funkin/src/input/: input.cpp  input.hpp  input_ring_buffer.hpp  input_types.hpp
funkin/src/math/: color.hpp  mat4.hpp  math_clamp.hpp  math_color.hpp  math_ease.hpp  math_lerp.hpp  math_mat4.hpp  math_rect.hpp  math_vec2.hpp  math_vec3.hpp  math_vec4.hpp  rect.hpp  vec2.hpp  vec3.hpp  vec4.hpp
funkin/src/platform/: win32_window.cpp  win32_window.hpp  window.hpp  x11_window.cpp  x11_window.hpp
funkin/src/platform/input/: input_win32.cpp  input_win32.hpp
funkin/src/platform/win32/: win32_input.cpp  win32_input.hpp  win32_window.cpp  win32_window.hpp
funkin/src/platform/window/: win32_window.cpp  window.hpp  window_win32.cpp  window_win32.hpp
funkin/src/renderer/: renderer.hpp  renderer_common.hpp
funkin/src/renderer/audio/: audio_manager.cpp  audio_manager.hpp  audio_source.cpp  audio_source.hpp
funkin/src/renderer/camera/: camera.cpp  camera.hpp  camera_gizmo.cpp  camera_gizmo.hpp
funkin/src/renderer/dx12/: commands_dx12.cpp  device_dx12.cpp  device_dx12.hpp  dx12_commands.cpp  dx12_commands.hpp  dx12_device.cpp  dx12_device.hpp  dx12_pipeline.cpp  dx12_pipeline.hpp  dx12_renderer.cpp  dx12_renderer.hpp  dx12_swapchain.cpp  dx12_swapchain.hpp  renderer_dx12.cpp  renderer_dx12.hpp  swapchain_dx12.cpp
funkin/src/renderer/gal/: descriptors.hpp  handles.hpp  idal.hpp  types.hpp
funkin/src/renderer/gal/dx12/: dx12_gal.cpp  dx12_gal.hpp  dx12_gal_buffer.cpp  dx12_gal_commands.cpp  dx12_gal_descriptors.cpp  dx12_gal_descriptors.hpp  dx12_gal_internal.hpp  dx12_gal_pipeline.cpp  dx12_gal_texture.cpp
funkin/src/renderer/gal/ui/: ui_dx12_text.cpp  ui_dx12_text.hpp
funkin/src/renderer/gal/vk/: vk_gal.cpp  vk_gal.hpp
funkin/src/renderer/shader/: shader_cache.cpp  shader_cache.hpp  shader_loader.cpp  shader_loader.hpp  shader_packer.cpp  shader_packer.hpp  shader_types.hpp
funkin/src/renderer/sprite/: animated_sprite.cpp  animated_sprite.hpp  sprite.cpp  sprite.hpp  sprite_batch.cpp  sprite_batch.hpp
funkin/src/renderer/vk/: vk_commands.cpp  vk_commands.hpp  vk_device.cpp  vk_device.hpp  vk_instance.cpp  vk_instance.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_surface.hpp  vk_surface_win32.cpp  vk_surface_x11.cpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_sync.cpp  vk_sync.hpp
funkin/src/scene/: scene.hpp
funkin/src/scene/components/: component_test.cpp  component_test.hpp
funkin/src/scene/shaders/: test.hlsl  ui.hlsl
funkin/src/shader/: shader_compiler.cpp  shader_compiler.hpp  shader_loader.cpp  shader_loader.hpp  shader_types.hpp
funkin/src/shaders/: shader_cache.cpp  shader_cache.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_converter.cpp  shader_converter.hpp  shader_job_queue.cpp  shader_job_queue.hpp  shader_program.cpp  shader_program.hpp  shader_uniform.cpp  shader_uniform.hpp
funkin/src/shaders/imgui/: fs_ocornut_imgui.bin.h  vs_ocornut_imgui.bin.h
funkin/src/shaders/sprites/: sprite_shader.cpp  sprite_shader.hpp
funkin/src/shared/: log.hpp  pch.hpp  utils.cpp  utils.hpp  xxhash_impl.cpp
funkin/src/ui/: theme.hpp  ui_contextmenu.cpp  ui_contextmenu.hpp  ui_font.cpp  ui_font.hpp  ui_icons.cpp  ui_icons.hpp  ui_log.hpp  ui_renderer.cpp  ui_renderer.hpp  ui_style.hpp  ui_theme.hpp  ui_titlebar.cpp  ui_titlebar.hpp
funkin/src/ui/editor/: ui_assets.cpp  ui_assets.hpp  ui_console.cpp  ui_console.hpp  ui_editor.cpp  ui_editor.hpp  ui_editor.qss  ui_inspector.cpp  ui_inspector.hpp  ui_scene_tree.cpp  ui_scene_tree.hpp  ui_scene_tree.qss
funkin/src/ui/editor/qss/: ui_assets.qss  ui_console.qss  ui_editor.qss  ui_inspector.qss  ui_scene_tree.qss
funkin/src/ui/editor/tools/: ui_transform_gizmo.cpp  ui_transform_gizmo.hpp
funkin/src/ui/elements/: element.hpp  element_button.cpp  element_button.hpp  element_list.cpp  element_list.hpp  element_panel.cpp  element_panel.hpp  element_text.cpp  element_text.hpp
funkin/src/ui/project/: ui_project.cpp  ui_project.hpp
funkin/src/ui/qss/: ui_contextmenu.qss
funkin/src/ui/screens/: screen.hpp  screen_project.cpp  screen_project.hpp
game/: CMakeLists.txt
