cmake_minimum_required(VERSION 3.20)
project(FNFCPP VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(BASE_EXPORT_DIR "${CMAKE_SOURCE_DIR}/export")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${BASE_EXPORT_DIR}/debug")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${BASE_EXPORT_DIR}/debug")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${BASE_EXPORT_DIR}/debug")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${BASE_EXPORT_DIR}/release")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${BASE_EXPORT_DIR}/release")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${BASE_EXPORT_DIR}/release")

add_subdirectory(funkin)