cmake_minimum_required(VERSION 3.20)
project(Funkin VERSION 0.1.0 LANGUAGES CXX) 

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    message(STATUS "Build: Ccache hooked successfully")
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(BASE_EXPORT_DIR "${CMAKE_SOURCE_DIR}/export")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${BASE_EXPORT_DIR}/debug")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   "${BASE_EXPORT_DIR}/debug")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${BASE_EXPORT_DIR}/debug")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${BASE_EXPORT_DIR}/release")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${BASE_EXPORT_DIR}/release")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${BASE_EXPORT_DIR}/release")

set(SDL_TESTS OFF CACHE BOOL "" FORCE)
set(SDL_TEST_LIBRARY OFF CACHE BOOL "" FORCE)
set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)

set(BGFX_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(FUNKIN_DEBUG)
endif()

if(WIN32)
    set(FUNKIN_WIN32_RESOURCE "${CMAKE_CURRENT_SOURCE_DIR}/resource.rc" CACHE INTERNAL "")
endif()

add_subdirectory(funkin/third_party/sdl)
add_subdirectory(funkin/third_party/bgfx)
add_subdirectory(funkin)