set(ENGINE_PROJECT_NAME "Funkin")

cmake_minimum_required(VERSION 3.20)
project(${ENGINE_PROJECT_NAME} VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    message(STATUS "Build: Ccache hooked successfully")
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(SDL_TESTS OFF CACHE BOOL "" FORCE)
set(SDL_TEST_LIBRARY OFF CACHE BOOL "" FORCE)
set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)

set(BGFX_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

set(QWINDOWKIT_BUILD_STATIC ON CACHE BOOL "" FORCE)
set(QWINDOWKIT_BUILD_WIDGETS ON CACHE BOOL "" FORCE)
set(QWINDOWKIT_BUILD_QUICK OFF CACHE BOOL "" FORCE)
set(QWINDOWKIT_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Quick Qml Svg)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(FUNKIN_DEBUG ON CACHE BOOL "" FORCE)
endif()

if(WIN32)
    set(FUNKIN_WIN32_RESOURCE "${CMAKE_CURRENT_SOURCE_DIR}/resource.rc" CACHE INTERNAL "")
endif()

add_subdirectory(funkin/third_party/qwindowkit)
add_subdirectory(funkin/third_party/sdl)
add_subdirectory(funkin/third_party/bgfx)
add_subdirectory(funkin)